--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mime-types": "^2.1.30",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
+    "redis": "^3.1.2",
+    "redis-server": "^1.2.2",
     "shortid": "^2.2.16"
   }
 }
