--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-rate-limit": "^5.2.6",
     "express-useragent": "^1.0.15",
     "mime-types": "^2.1.30",
+    "mmmagic": "^0.5.3",
     "mongoose": "^5.12.7",
     "multer": "^1.4.2",
     "redis": "^3.1.2",
