Some nice QOL features
Logging, purging & cache time.

--- a/configs/gazo.config.json
+++ b/configs/gazo.config.json
@@ -5,5 +5,13 @@
         "time": 60,
         "requests": 40
     },
-    "server_location": "http://localhost:11000"
+    "server_location": "http://localhost:11000",
+    "cache_time": 30,
+    "logging": true,
+    "purging": {
+        "redis": true,
+        "mongodb": false,
+        "uploads": false,
+        "logs": false
+    }
 }
