--- a/configs/gazo.config.json
+++ b/configs/gazo.config.json
@@ -5,9 +5,10 @@
         "time": 60,
         "requests": 40
     },
-    "server_location": "https://bd15e0f61a5f.ngrok.io",
-    "cache_time": 30,
+    "server_location": "http://localhost:11000",
+    "cache_time": 60,
     "logging": true,
+    "site_name": "sample text",
     "purging": {
         "redis": true,
         "mongodb": false,
