Small CSS & image viewing changes.

--- a/configs/auth.config.template.json
+++ b/configs/auth.config.template.json
@@ -1,5 +1,6 @@
 {
     "mongo": {
         "database_connection_string": "mongodb+srv://<databaseUser>:<password>@<url>/<database>?retryWrites=true&w=majority"
-    }
+    },
+    "redis": "localhost:6379"
 }
